full表相关更新